--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
-  <title>Frontend Mentor | Article preview component</title>
+  <title>Card Component</title>
 </head>
 
 <body>
